--- a/Convenience_POS_System/src/main/resources/templates/sale/sale.html
+++ b/Convenience_POS_System/src/main/resources/templates/sale/sale.html
@@ -78,8 +78,29 @@
 
             <div>
                 <h5 th:text="|총 계산금액 : ${totalCost}|"></h5>
-                <a href="/sale/calculate" class="btn btn-primary btn-lg">계산하기</a>
+                <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    계산하기모달
+                </button>
                 <a href="/sale/reset" class="btn btn-primary btn-lg">초기화하기</a>
+
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">취소</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <h5 th:text="|총 계산금액 ${totalCost}원을 계산하시겠습니까?|"></h5>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <a href="/sale/calculate" class="btn btn-primary btn-lg">계산하기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
