--- a/Convenience_POS_System/src/main/resources/templates/product/add.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/add.html
@@ -47,6 +47,7 @@
                     <th>제품이름</th>
                     <th>가격</th>
                     <th>수량</th>
+                    <th>판매상태</th>
                     <th>입고하기</th>
                 </tr>
                 <tr th:each="product : ${products}">
@@ -54,6 +55,12 @@
                     <td th:text="${product.getName()}"></td>
                     <td th:text="${product.getPrice()}"></td>
                     <td th:text="${product.getQuantity()}"></td>
+                    <th:block th:if="${product.getSell() eq 1}">
+                        <td><span class="badge rounded-pill bg-primary">판매중</span></td>
+                    </th:block>
+                    <th:block th:unless="${product.getSell() eq 1}">
+                        <td><span class="badge rounded-pill bg-danger">판매중지</span></td>
+                    </th:block>
                     <td><a th:href="@{/product/add/{productId}(productId=${product.getId()})}" th:text="추가하기">추가하기</a></td>
                 </tr>
             </table>
