--- a/Convenience_POS_System/src/main/resources/templates/product/add.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/add.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <style>
         body, html{
             margin: 0;
@@ -28,6 +29,34 @@
             margin-top: 100px;
             padding-bottom: 300px;
         }
+
+        table {
+            border-collapse:collapse;
+            margin-bottom: 10px;
+        }
+        th, td {
+            padding: 3px 10px;
+        }
+        .off-screen {
+            display: none;
+        }
+        #nav {
+            width: 500px;
+            text-align: center;
+        }
+        #nav a {
+            display: inline-block;
+            padding: 3px 5px;
+            margin-right: 10px;
+            font-family:Tahoma;
+            background: #ccc;
+            color: #000;
+            text-decoration: none;
+        }
+        #nav a.active {
+            background: #333;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -39,9 +68,24 @@
 
         <div>
             <a href="/product/add/new" class="btn btn-primary btn-lg">새로운 제품 추가하기</a>
-        </div>
-        <div>
-            <table class="table">
+        </div><br><br>
+        <div align="center">
+            <table id="products" class="table">
+                <!--
+                                <caption>product list
+
+                    <form action="" id="setRows">
+                        <p>
+                            showing
+                            <input type="text" name="rowPerPage" value="3">
+                            item per page
+                        </p>
+                    </form>
+
+                </caption>
+                -->
+
+                <thead>
                 <tr>
                     <th>Code</th>
                     <th>제품이름</th>
@@ -50,6 +94,8 @@
                     <th>판매상태</th>
                     <th>입고하기</th>
                 </tr>
+                </thead>
+                <tbody>
                 <tr th:each="product : ${products}">
                     <td th:text="${product.getCode()}"></td>
                     <td th:text="${product.getName()}"></td>
@@ -63,15 +109,152 @@
                     </th:block>
                     <td><a th:href="@{/product/add/{productId}(productId=${product.getId()})}" th:text="추가하기">추가하기</a></td>
                 </tr>
+                </tbody>
+
             </table>
+
         </div>
     </div>
     <!-- Footer-->
     <th:block th:replace="fragments/footer :: footerFragment"></th:block>
-
 </div>
 
+<script>
+    $(function(){
+        var rowPerPage = 10;//$('[name="rowPerPage"]').val() * 1;// 1 을  곱하여 문자열을 숫자형로 변환
 
+        var zeroWarning = 'Sorry, but we cat\'t display "0" rows page. + \nPlease try again.'
+        if (!rowPerPage) {
+            alert(zeroWarning);
+            return;
+        }
+        $('#nav').remove();
+        var $products = $('#products');
+
+        $products.after('<div id="nav">');
+
+
+        var $tr = $($products).find('tbody tr');
+        var rowTotals = $tr.length;
+
+        var pageTotal = Math.ceil(rowTotals/ rowPerPage);
+        var i = 0;
+
+        for (; i < pageTotal; i++) {
+            $('<a href="#"></a>')
+                .attr('rel', i)
+                .html(i + 1)
+                .appendTo('#nav');
+        }
+
+        $tr.addClass('off-screen')
+            .slice(0, rowPerPage)
+            .removeClass('off-screen');
+
+        var $pagingLink = $('#nav a');
+        $pagingLink.on('click', function (evt) {
+            evt.preventDefault();
+            var $this = $(this);
+            if ($this.hasClass('active')) {
+                return;
+            }
+            $pagingLink.removeClass('active');
+            $this.addClass('active');
+
+            // 0 => 0(0*4), 4(0*4+4)
+            // 1 => 4(1*4), 8(1*4+4)
+            // 2 => 8(2*4), 12(2*4+4)
+            // 시작 행 = 페이지 번호 * 페이지당 행수
+            // 끝 행 = 시작 행 + 페이지당 행수
+
+            var currPage = $this.attr('rel');
+            var startItem = currPage * rowPerPage;
+            var endItem = startItem + rowPerPage;
+
+            $tr.css('opacity', '0.0')
+                .addClass('off-screen')
+                .slice(startItem, endItem)
+                .removeClass('off-screen')
+                .animate({opacity: 1}, 300);
+
+        });
+
+        $pagingLink.filter(':first').addClass('active');
+    });
+    /*
+    var $setRows = $('#setRows');
+
+
+    $setRows.submit(function (e) {
+        e.preventDefault();
+        var rowPerPage = 10;//$('[name="rowPerPage"]').val() * 1;// 1 을  곱하여 문자열을 숫자형로 변환
+
+        var zeroWarning = 'Sorry, but we cat\'t display "0" rows page. + \nPlease try again.'
+        if (!rowPerPage) {
+            alert(zeroWarning);
+            return;
+        }
+        $('#nav').remove();
+        var $products = $('#products');
+
+        $products.after('<div id="nav">');
+
+
+        var $tr = $($products).find('tbody tr');
+        var rowTotals = $tr.length;
+//	console.log(rowTotals);
+
+        var pageTotal = Math.ceil(rowTotals/ rowPerPage);
+        var i = 0;
+
+        for (; i < pageTotal; i++) {
+            $('<a href="#"></a>')
+                .attr('rel', i)
+                .html(i + 1)
+                .appendTo('#nav');
+        }
+
+        $tr.addClass('off-screen')
+            .slice(0, rowPerPage)
+            .removeClass('off-screen');
+
+        var $pagingLink = $('#nav a');
+        $pagingLink.on('click', function (evt) {
+            evt.preventDefault();
+            var $this = $(this);
+            if ($this.hasClass('active')) {
+                return;
+            }
+            $pagingLink.removeClass('active');
+            $this.addClass('active');
+
+            // 0 => 0(0*4), 4(0*4+4)
+            // 1 => 4(1*4), 8(1*4+4)
+            // 2 => 8(2*4), 12(2*4+4)
+            // 시작 행 = 페이지 번호 * 페이지당 행수
+            // 끝 행 = 시작 행 + 페이지당 행수
+
+            var currPage = $this.attr('rel');
+            var startItem = currPage * rowPerPage;
+            var endItem = startItem + rowPerPage;
+
+            $tr.css('opacity', '0.0')
+                .addClass('off-screen')
+                .slice(startItem, endItem)
+                .removeClass('off-screen')
+                .animate({opacity: 1}, 300);
+
+        });
+
+        $pagingLink.filter(':first').addClass('active');
+
+    });
+
+
+    $setRows.submit();
+*/
+
+</script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
