--- a/Convenience_POS_System/src/main/resources/templates/product/productList.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/productList.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <link href="/bootstrap/css/paging.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <style>
         body, html{
             margin: 0;
@@ -37,8 +39,14 @@
     <th:block th:replace="fragments/navbar :: navbarFragment"></th:block>
     <div id="content">
 
-        <div>
-            <table class="table">
+        <div class="py-5 text-center">
+            <h2>제품 재고 현황</h2>
+        </div>
+
+        <div align="center">
+            <table id="products" class="table">
+
+                <thead>
                 <tr>
                     <th>Code</th>
                     <th>제품이름</th>
@@ -47,6 +55,8 @@
                     <th>판매상태</th>
                     <th>상세정보</th>
                 </tr>
+                </thead>
+                <tbody>
                 <tr th:each="product : ${products}">
                     <td th:text="${product.getCode()}"></td>
                     <td th:text="${product.getName()}"></td>
@@ -60,7 +70,10 @@
                     </th:block>
                     <td><a th:href="@{/product/list/{productId}(productId=${product.getId()})}" th:text="변경이록상세정보">변경이록 상세정보</a></td>
                 </tr>
+                </tbody>
+
             </table>
+
         </div>
 
     </div>
@@ -68,9 +81,69 @@
     <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
+<script>
+    $(function(){
+        var rowPerPage = 10;//$('[name="rowPerPage"]').val() * 1;// 1 을  곱하여 문자열을 숫자형로 변환
+
+        var zeroWarning = 'Sorry, but we cat\'t display "0" rows page. + \nPlease try again.'
+        if (!rowPerPage) {
+            alert(zeroWarning);
+            return;
+        }
+        $('#nav').remove();
+        var $products = $('#products');
+
+        $products.after('<div id="nav">');
 
 
+        var $tr = $($products).find('tbody tr');
+        var rowTotals = $tr.length;
 
+        var pageTotal = Math.ceil(rowTotals/ rowPerPage);
+        var i = 0;
+
+        for (; i < pageTotal; i++) {
+            $('<a href="#"></a>')
+                .attr('rel', i)
+                .html(i + 1)
+                .appendTo('#nav');
+        }
+
+        $tr.addClass('off-screen')
+            .slice(0, rowPerPage)
+            .removeClass('off-screen');
+
+        var $pagingLink = $('#nav a');
+        $pagingLink.on('click', function (evt) {
+            evt.preventDefault();
+            var $this = $(this);
+            if ($this.hasClass('active')) {
+                return;
+            }
+            $pagingLink.removeClass('active');
+            $this.addClass('active');
+
+            // 0 => 0(0*4), 4(0*4+4)
+            // 1 => 4(1*4), 8(1*4+4)
+            // 2 => 8(2*4), 12(2*4+4)
+            // 시작 행 = 페이지 번호 * 페이지당 행수
+            // 끝 행 = 시작 행 + 페이지당 행수
+
+            var currPage = $this.attr('rel');
+            var startItem = currPage * rowPerPage;
+            var endItem = startItem + rowPerPage;
+
+            $tr.css('opacity', '0.0')
+                .addClass('off-screen')
+                .slice(startItem, endItem)
+                .removeClass('off-screen')
+                .animate({opacity: 1}, 300);
+
+        });
+
+        $pagingLink.filter(':first').addClass('active');
+    });
+</script>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
