--- a/Convenience_POS_System/src/main/resources/templates/product/updateList.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/updateList.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <link href="/bootstrap/css/paging.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <style>
         body, html {
             margin: 0;
@@ -40,38 +42,46 @@
 
     <div id="content">
 
-        <table class="table">
-            <tr>
-                <th>Code</th>
-                <th>제품이름</th>
-                <th>가격</th>
-                <th>수정하기</th>
-                <th>수정이력</th>
-                <th>판매상태</th>
-                <th>판매상태수정</th>
-            </tr>
-            <tr th:each="product : ${products}">
-                <td th:text="${product.getCode()}"></td>
-                <td th:text="${product.getName()}"></td>
-                <td th:text="${product.getPrice()}"></td>
-                <td><a th:href="@{/product/update/{productId}(productId=${product.getId()})}" th:text="수정하기">수정하기</a>
-                </td>
-                <td><a th:href="@{/product/update/detail/{productId}(productId=${product.getId()})}"
-                       th:text="수정이력">수정이력</a></td>
-                <th:block th:if="${product.getSell() eq 1}">
-                    <td><span class="badge rounded-pill bg-primary">판매중</span></td>
-                </th:block>
-                <th:block th:unless="${product.getSell() eq 1}">
-                    <td><span class="badge rounded-pill bg-danger">판매중지</span></td>
-                </th:block>
-                <td>
-                    <form method="post" th:action="@{/product/update/state/{productId}(productId=${product.getId()})}">
-                        <button th:if="${product.getSell() eq 1}" th:text="판매중지하기"></button>
-                        <button th:if="${product.getSell() eq 0}" th:text="판매재개하기"></button>
-                    </form>
-                </td>
-            </tr>
-        </table>
+        <div align="center">
+            <table id="products" class="table">
+
+                <thead>
+                <tr>
+                    <th>Code</th>
+                    <th>제품이름</th>
+                    <th>가격</th>
+                    <th>수정하기</th>
+                    <th>수정이력</th>
+                    <th>판매상태</th>
+                    <th>판매상태수정</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.getCode()}"></td>
+                    <td th:text="${product.getName()}"></td>
+                    <td th:text="${product.getPrice()}"></td>
+                    <td><a th:href="@{/product/update/{productId}(productId=${product.getId()})}" th:text="수정하기">수정하기</a>
+                    </td>
+                    <td><a th:href="@{/product/update/detail/{productId}(productId=${product.getId()})}"
+                           th:text="수정이력">수정이력</a></td>
+                    <th:block th:if="${product.getSell() eq 1}">
+                        <td><span class="badge rounded-pill bg-primary">판매중</span></td>
+                    </th:block>
+                    <th:block th:unless="${product.getSell() eq 1}">
+                        <td><span class="badge rounded-pill bg-danger">판매중지</span></td>
+                    </th:block>
+                    <td>
+                        <form method="post" th:action="@{/product/update/state/{productId}(productId=${product.getId()})}">
+                            <button th:if="${product.getSell() eq 1}" th:text="판매중지하기"></button>
+                            <button th:if="${product.getSell() eq 0}" th:text="판매재개하기"></button>
+                        </form>
+                    </td>
+                </tr>
+                </tbody>
+
+            </table>
+        </div>
 
     </div>
 
@@ -79,7 +89,69 @@
     <th:block th:replace="fragments/footer :: footerFragment"></th:block>
 </div>
 
+<script>
+    $(function(){
+        var rowPerPage = 10;//$('[name="rowPerPage"]').val() * 1;// 1 을  곱하여 문자열을 숫자형로 변환
 
+        var zeroWarning = 'Sorry, but we cat\'t display "0" rows page. + \nPlease try again.'
+        if (!rowPerPage) {
+            alert(zeroWarning);
+            return;
+        }
+        $('#nav').remove();
+        var $products = $('#products');
+
+        $products.after('<div id="nav">');
+
+
+        var $tr = $($products).find('tbody tr');
+        var rowTotals = $tr.length;
+
+        var pageTotal = Math.ceil(rowTotals/ rowPerPage);
+        var i = 0;
+
+        for (; i < pageTotal; i++) {
+            $('<a href="#"></a>')
+                .attr('rel', i)
+                .html(i + 1)
+                .appendTo('#nav');
+        }
+
+        $tr.addClass('off-screen')
+            .slice(0, rowPerPage)
+            .removeClass('off-screen');
+
+        var $pagingLink = $('#nav a');
+        $pagingLink.on('click', function (evt) {
+            evt.preventDefault();
+            var $this = $(this);
+            if ($this.hasClass('active')) {
+                return;
+            }
+            $pagingLink.removeClass('active');
+            $this.addClass('active');
+
+            // 0 => 0(0*4), 4(0*4+4)
+            // 1 => 4(1*4), 8(1*4+4)
+            // 2 => 8(2*4), 12(2*4+4)
+            // 시작 행 = 페이지 번호 * 페이지당 행수
+            // 끝 행 = 시작 행 + 페이지당 행수
+
+            var currPage = $this.attr('rel');
+            var startItem = currPage * rowPerPage;
+            var endItem = startItem + rowPerPage;
+
+            $tr.css('opacity', '0.0')
+                .addClass('off-screen')
+                .slice(startItem, endItem)
+                .removeClass('off-screen')
+                .animate({opacity: 1}, 300);
+
+        });
+
+        $pagingLink.filter(':first').addClass('active');
+    });
+</script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
