--- a/Convenience_POS_System/src/main/resources/templates/sale/sale.html
+++ b/Convenience_POS_System/src/main/resources/templates/sale/sale.html
@@ -79,7 +79,7 @@
             <div>
                 <h5 th:text="|총 계산금액 : ${totalCost}|"></h5>
                 <button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    계산하기모달
+                    계산하기
                 </button>
                 <a href="/sale/reset" class="btn btn-primary btn-lg">초기화하기</a>
 
