--- a/Convenience_POS_System/src/main/resources/templates/statistics/statistics.html
+++ b/Convenience_POS_System/src/main/resources/templates/statistics/statistics.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <link href="/bootstrap/css/paging.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <style>
@@ -618,20 +619,29 @@
 
     <div id="content">
         <h1>판매 조회</h1>
-        <table class="table">
-            <tr>
-                <th>판매 ID</th>
-                <th>총 판매 가격</th>
-                <th>시간</th>
-                <th>상세조회</th>
-            </tr>
-            <tr th:each="sale : ${sales}">
-                <th th:text="${sale.getId()}"/>
-                <th th:text="${sale.getPrice()}"/>
-                <th th:text="${sale.getDatetime()}"/>
-                <td><a th:href="@{/statistics/sale/{saleId}(saleId=${sale.getId()})}" th:text="상세보기">상세보기</a></td>
-            </tr>
-        </table>
+        <div align="center">
+            <table id="sales" class="table">
+                <thead>
+                <tr>
+                    <th>판매 ID</th>
+                    <th>총 판매 가격</th>
+                    <th>시간</th>
+                    <th>상세조회</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="sale : ${sales}">
+                    <th th:text="${sale.getId()}"/>
+                    <th th:text="${sale.getPrice()}"/>
+                    <th th:text="${sale.getDatetime()}"/>
+                    <td><a th:href="@{/statistics/sale/{saleId}(saleId=${sale.getId()})}" th:text="상세보기">상세보기</a></td>
+                </tr>
+                </tbody>
+
+            </table>
+        </div>
+
+
 
 
     </div>
@@ -640,7 +650,69 @@
 
 </div>
 
+<script>
+    $(function(){
+        var rowPerPage = 10;//$('[name="rowPerPage"]').val() * 1;// 1 을  곱하여 문자열을 숫자형로 변환
 
+        var zeroWarning = 'Sorry, but we cat\'t display "0" rows page. + \nPlease try again.'
+        if (!rowPerPage) {
+            alert(zeroWarning);
+            return;
+        }
+        $('#nav').remove();
+        var $sales = $('#sales');
+
+        $sales.after('<div id="nav">');
+
+
+        var $tr = $($sales).find('tbody tr');
+        var rowTotals = $tr.length;
+
+        var pageTotal = Math.ceil(rowTotals/ rowPerPage);
+        var i = 0;
+
+        for (; i < pageTotal; i++) {
+            $('<a href="#"></a>')
+                .attr('rel', i)
+                .html(i + 1)
+                .appendTo('#nav');
+        }
+
+        $tr.addClass('off-screen')
+            .slice(0, rowPerPage)
+            .removeClass('off-screen');
+
+        var $pagingLink = $('#nav a');
+        $pagingLink.on('click', function (evt) {
+            evt.preventDefault();
+            var $this = $(this);
+            if ($this.hasClass('active')) {
+                return;
+            }
+            $pagingLink.removeClass('active');
+            $this.addClass('active');
+
+            // 0 => 0(0*4), 4(0*4+4)
+            // 1 => 4(1*4), 8(1*4+4)
+            // 2 => 8(2*4), 12(2*4+4)
+            // 시작 행 = 페이지 번호 * 페이지당 행수
+            // 끝 행 = 시작 행 + 페이지당 행수
+
+            var currPage = $this.attr('rel');
+            var startItem = currPage * rowPerPage;
+            var endItem = startItem + rowPerPage;
+
+            $tr.css('opacity', '0.0')
+                .addClass('off-screen')
+                .slice(startItem, endItem)
+                .removeClass('off-screen')
+                .animate({opacity: 1}, 300);
+
+        });
+
+        $pagingLink.filter(':first').addClass('active');
+    });
+</script>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
