--- a/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
@@ -31,6 +31,8 @@
         .field-error {
             border-color: #dc3545;
             color: #dc3545;
+            padding-left: 0.75rem;
+            text-align: center;
         }
     </style>
 </head>
@@ -49,9 +51,14 @@
         <h4 class="mb-3">회원 정보 입력</h4>
         <form action="/member/signup" method="post">
             <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">이메일</label>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">아이디 이메일</label>
                 <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" name="email">
+                    <input type="email" th:class="${errors?.containsKey('email')} ? 'form-control field-error' : 'form-control'"
+                           class="form-control" id="inputEmail3" name="email">
+                </div>
+                <div class="field-error" th:if="${errors?.containsKey('email')}"
+                     th:text="${errors['email']}">
+                    이메일 오류
                 </div>
             </div>
             <div class="row mb-3">
@@ -63,13 +70,23 @@
             <div class="row mb-3">
                 <label for="confirmPassword3" class="col-sm-2 col-form-label">비밀번호 확인</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="confirmPassword3" name="passwordcf">
+                    <input type="password" th:class="${errors?.containsKey('password')} ? 'form-control field-error' : 'form-control'"
+                           class="form-control" id="confirmPassword3" name="passwordcf">
+                </div>
+                <div class="field-error" th:if="${errors?.containsKey('password')}"
+                     th:text="${errors['password']}">
+                    비밀번호 오류
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="name" class="col-sm-2 col-form-label">이름</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" name="name">
+                    <input type="text" th:class="${errors?.containsKey('name')} ? 'form-control field-error' : 'form-control'"
+                           class="form-control" id="name" name="name">
+                </div>
+                <div class="field-error" th:if="${errors?.containsKey('name')}"
+                     th:text="${errors['name']}">
+                    이름 오류
                 </div>
             </div>
             <fieldset class="row mb-3">
