--- a/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/member/addMemberForm.html
@@ -64,17 +64,22 @@
             <div class="row mb-3">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">비밀번호</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" name="password">
+                    <input type="password" th:class="${errors?.containsKey('password')} ? 'form-control field-error' : 'form-control'"
+                           class="form-control" id="inputPassword3" name="password">
+                </div>
+                <div class="field-error" th:if="${errors?.containsKey('password')}"
+                     th:text="${errors['password']}">
+                    비밀번호 오류
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="confirmPassword3" class="col-sm-2 col-form-label">비밀번호 확인</label>
                 <div class="col-sm-10">
-                    <input type="password" th:class="${errors?.containsKey('password')} ? 'form-control field-error' : 'form-control'"
+                    <input type="password" th:class="${errors?.containsKey('passwordConfirm')} ? 'form-control field-error' : 'form-control'"
                            class="form-control" id="confirmPassword3" name="passwordcf">
                 </div>
-                <div class="field-error" th:if="${errors?.containsKey('password')}"
-                     th:text="${errors['password']}">
+                <div class="field-error" th:if="${errors?.containsKey('passwordConfirm')}"
+                     th:text="${errors['passwordConfirm']}">
                     비밀번호 오류
                 </div>
             </div>
