--- a/Convenience_POS_System/src/main/resources/templates/product/addNewProductForm.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/addNewProductForm.html
@@ -28,6 +28,14 @@
             margin-top: 100px;
             padding-bottom: 300px;
         }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+            padding-left: 0.75rem;
+        }
+        .msg{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -43,30 +51,46 @@
 
         <div class="container">
             <h4 class="mb-3">제품 정보 입력</h4>
-            <form action="/product/add/new" method="post">
+            <form action="/product/add/new" method="post" th:object="${product}">
                 <input type="text" hidden id="sell" name="sell" value="1"/>
                 <div class="row mb-3">
                     <label for="code" class="col-sm-2 col-form-label">코드</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="code" name="code">
+                        <input type="text" th:field="*{code}"
+                               th:errorclass="field-error" class="form-control" id="code" name="code">
+                    </div>
+                    <div class="field-error msg" th:errors="*{code}">
+                        코드 오류
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="name" class="col-sm-2 col-form-label">제품명</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="name" name="name">
+                        <input type="text" th:field="*{name}"
+                               th:errorclass="field-error" class="form-control" id="name" name="name">
+                    </div>
+                    <div class="field-error msg" th:errors="*{name}">
+                        이름 오류
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="price" class="col-sm-2 col-form-label">가격</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="price" name="price">
+                        <input type="text" th:field="*{price}"
+                               th:errorclass="field-error" class="form-control" id="price" name="price">
+                    </div>
+                    <div class="field-error msg" th:errors="*{price}">
+                        가격 오류
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label for="quantity" class="col-sm-2 col-form-label">수량</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="quantity" name="quantity">
+                        <input type="text" th:field="*{quantity}"
+                               th:errorclass="field-error" class="form-control" id="quantity" name="quantity">
+                    </div>
+                    <div class="field-error msg" th:errors="*{quantity}">
+                        수량 오류
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">제품 추가</button>
