--- a/Convenience_POS_System/src/main/resources/templates/product/addProductQuantity.html
+++ b/Convenience_POS_System/src/main/resources/templates/product/addProductQuantity.html
@@ -28,6 +28,14 @@
             margin-top: 100px;
             padding-bottom: 300px;
         }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+            padding-left: 0.75rem;
+        }
+        .msg{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
